--- a/trunk/web/app/views/flickr/photos.html.erb
+++ b/trunk/web/app/views/flickr/photos.html.erb
@@ -1,18 +1,14 @@
-<div id="paginationMeta">
+<div class="paginationMeta">
 	<div id="per_page"><%= @per_page %></div>
 	<div id="total"><%= @total %></div>
 	<div id="pages"><%= @pages %></div>
 	<div id="page"><%= @page %></div>
 </div>
 
-<script type="text/javascript">
-	var fullsize = {};
-</script>
-
-<div id="photoset">
+<div class="photoSet container">
 	<% @photos.each_with_index do |photo,index| %>
-	<div class="photo">
-		<%= image_tag photo.thumb, :title=>photo['title'], :alt=>photo.full('m') %>
+	<div class="photoItem left">
+		<%= image_tag photo.thumb, :title=>photo['title'], :alt=>photo.full('o'), :class=>'photo' %>
 	</div>
 	<% end %>
 </div>
