cleaning buildings feed and display a bit

--- a/trunk/web/app/views/buildings/feed.xml.erb
+++ b/trunk/web/app/views/buildings/feed.xml.erb
@@ -3,7 +3,7 @@
       xmlns:georss="http://www.georss.org/georss">
    <title>MyVernacular Buildings</title>
    <subtitle>A collaborative, online resource for vernacular architecture.</subtitle>
-   <link href="http://example.org/"/>
+   <link href="http://myvernacular.scholarslab.org/"/>
    <updated>2005-12-13T18:30:02Z</updated>
    <author>
       <name>Scholars' Lab, University of Virginia Library</name>
@@ -11,7 +11,7 @@
    <% @buildings.each do |building| %>
    <entry>
       <title><%= building.name %></title>
-      <link href="http://example.org/2005/09/09/atom01"/>
+      <link href="<%= url_for building %>"/>
       <updated><%= building.updated_at %></updated>
       <summary><%= building.name %></summary>
       <description><%= building.name + ": " + building.city + ", " + building.state %></description>
